# BINA-simulation

./: .gitignore  Bina.cc  CMakeLists.txt  CNAME  Dockerfile  GNUmakefile  README  README.md  bina_breakup2.11.cc  geo.mac  plot.py  plot2.py  plot4.py  ploto_convert.py  pluto.mac  pluto_convert.py  recompile  run.mac  star.C  test.mac
Dockerfile/: Dockerfile  README.md
Dockerfile/ToPublic/: run.mac  run.sh
docs/: README.md
include/: Bina_ActionInitialization.hh  Bina_DetectorConstruction.hh  Bina_DetectorMessenger.hh  Bina_EventAction.hh  Bina_Graniastoslupy.hh  Bina_PhysicsList.hh  Bina_PhysicsMessenger.hh  Bina_PrimaryGeneratorAction.hh  Bina_RunAction.hh  Bina_SteppingAction.hh  Bina_VisManager.hh  features.hh
scripts/: Event.py  bina.py  class.py  pluto_convert.py
scripts/BinaTools/: Events.py
scripts/BinaVis/: __init__.py
src/: Bina_ActionInitialization.cc  Bina_DetectorConstruction.cc  Bina_DetectorMessenger.cc  Bina_EventAction.cc  Bina_Graniastoslupy.cc  Bina_Material.cfg  Bina_Obroty.cc  Bina_PhysicsList.cc  Bina_PhysicsMessenger.cc  Bina_PrimaryGeneratorAction.cc  Bina_RunAction.cc  Bina_SteppingAction.cc  Bina_VisManager.cc
xx/: CMakeCache.txt  Makefile  cmake_install.cmake
